tests/sumo/output/e1Instant/errors/id_empty/errors.sumo
Error: Attribute 'id' in definition of a instantInductionLoop is empty.
Quitting (on error).
